# lastfm_radio_scrobbler

./: .gitignore  README.md  pyproject.toml
lf_scrobbler/: config_schema.py  lastfm_radio_scrobble.py
rhythmbox-plugin/: .plugin
rhythmbox-plugin/radio_scrobbler_plugin/: __init__.py  activatible.py  configuration.py  requirements.txt
